--- a/style/designSystem.css
+++ b/style/designSystem.css
@@ -5,7 +5,6 @@
     padding: 0;
     box-sizing: border-box;
     font-family: var(--font-1);
-    background-color: var(--color-blue-25);
 }
 :root {
     --h1: 40px;
@@ -110,4 +109,8 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+.logo {
+    width: 100px;
+    height: auto;
 }
