--- a/Chore Door/style.css
+++ b/Chore Door/style.css
@@ -2,11 +2,11 @@ body {
     box-sizing: border-box;
     margin: auto;
     padding: 0;
-    background-color:black;
-    font-family: 'Roboto', sans-serif;
+    background-color: var(--color-dark-100);
+    font-family: var(--font-2);
 }
 .sectionOne {
-    background-color:wheat;
+    background-color: var(--color-pink-100);
     padding: 0.8rem;
     margin: auto;
     text-align: center;
@@ -39,7 +39,7 @@ body {
     font-size: 2.5rem;
 }
 .text-light {
-    color: whitesmoke;
+    color: var(--color-white-100);
 }
 .responsive-image {
     max-width: 100%;
@@ -63,8 +63,8 @@ body {
 .button {
     padding: 10px 15px;
     width: 15rem;
-    color: whitesmoke;
-    background-color: chocolate;
+    color: var(--color-white-100);
+    background-color: var(--color-pink-100);
     border-radius: 5px;
     border: none;
     cursor: pointer;
