--- a/styles/designSystem.css
+++ b/styles/designSystem.css
@@ -239,6 +239,8 @@ a {
 .flex {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 15px;
 
 }
