--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
     font-family: var(--font-2);
     font-size: var(--body);
     color: var(--color-white-75);
-    line-height: 1.3;
+    line-height: 1.5;
 }
 .sectionOne__left--btn {
     align-self: start;
@@ -27,33 +27,53 @@
 ** ! style rules for sectionTwo
 */
 .sectionTwo {
-    height: auto;
-    width: 100%;
-    padding-top: 40px;
+    padding: 40px 0;
+    display: grid;
+    gap: 30px;
+    
 }
-.imageGrid {
+.sectionTwo__logo {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     gap: 20px 8px;
-    justify-content: center;
-    align-items: center;
+}
+.sectionTwo__logo img {
+    justify-self: center;
+    align-self: center;
 }
 [class ^="sectionTwo__logo--"] {
-    max-width: 70px;
+    max-width: 40%;
+    height: auto;
 }
 #figma,
 #google,
 #codecademy,
 #youtube {
-    max-width: 150px;
+    max-width: 80%;
+    height: auto;
 }
 .sectionTwo__content--text {
     line-height: 1.5;
+    font-family: var(--font-2);
+    font-size: var(--body);
 }
-
 /*
-Meal maker
+** ! style rules for sectionThree
+*/
+
+.sectionThree__left {
+    max-width: 80%;
+}
+.sectionTree__right-text {
+    color: var(--color-dark-75);
+    font-family: var(--font-2);
+    font-size: var(--body);
+}
+.sectionTree__right-button {
+    align-self: flex-start;
+}
+/* Meal maker
 */
 #mealMakerLogo{
  border-radius: 12px;
